Ich habe Unterseiten hinzugefügt und Banner auf diesen erstellt.

--- a/kultur.html
+++ b/kultur.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Amelie in Neuseeland</title>
+    <title>Kultur - Amelie in Neuseeland</title>
 
     <!-- CSS -->
     <link rel="stylesheet" href="style.css?v=1.0">
@@ -13,21 +13,16 @@
     <!-- ==================== Navbar ==================== -->
     <header id="navbar" class="navbar">
         <div class="container nav-container">
-            <!-- Logo -->
             <div class="logo">
                 <div class="logo-icon">FN</div>
                 <span class="logo-text">FutureNav</span>
             </div>
-
-            <!-- Desktop‑Navigation -->
             <nav class="nav-desktop">
                 <a href="index.html" class="nav-link">Startseite</a>
                 <a href="neuseeland.html" class="nav-link">Neuseeland</a>
                 <a href="an-und_Abreise.html" class="nav-link">An‑ und Abreise</a>
                 <a href="gastfamilie.html" class="nav-link">Gastfamilie</a>
                 <a href="schule.html" class="nav-link">Schule</a>
-
-                <!-- Dropdown für Reisen & Orte -->
                 <div class="nav-item dropdown">
                     <a href="#orte" class="nav-link">Reisen & Orte</a>
                     <ul class="dropdown-menu">
@@ -35,21 +30,16 @@
                         <li><a href="suedinsel.html" class="dropdown-link">Südinsel</a></li>
                     </ul>
                 </div>
-
                 <a href="kultur.html" class="nav-link">Kultur</a>
                 <a href="natur.html" class="nav-link">Natur</a>
                 <a href="impressum.html" class="nav-link">Impressum</a>
             </nav>
-
-            <!-- Mobile‑Button -->
             <button id="mobile-menu-button" class="mobile-btn" aria-label="Menü öffnen">
                 <span class="bar bar1"></span>
                 <span class="bar bar2"></span>
                 <span class="bar bar3"></span>
             </button>
         </div>
-
-        <!-- Mobile‑Navigation -->
         <nav id="mobile-menu" class="nav-mobile hidden">
             <a href="index.html" class="mobile-link">Startseite</a>
             <a href="neuseeland.html" class="mobile-link">Neuseeland</a>
@@ -65,30 +55,18 @@
         </nav>
     </header>
 
-    <!-- ==================== Hero (Video‑Banner) ==================== -->
-    <section id="hero" class="hero">
-        <video id="hero-video" autoplay muted loop playsinline>
-            <source src="https://www.w3schools.com/html/mov_bbb.mp4" type="video/mp4">
-            Ihr Browser unterstützt das Video‑Tag nicht.
-        </video>
-
-        <!-- Titel‑Overlay -->
-        <h1 class="hero-title">Amelie in Neuseeland</h1>
+    <!-- ==================== Banner ==================== -->
+    <section class="banner">
+        <img src="img/platzhalter_farn.jpg" alt="Banner Kultur">
+        <h1 class="banner-title">Kultur</h1>
     </section>
 
-    <!-- ==================== Platzhalter‑Text ==================== -->
-    <div id="placeholder" class="container placeholder-text hidden">
-        <p>
-            Hier wird bald mehr über mein Abenteuer in Neuseeland stehen! Ich freue mich darauf,
-            die beeindruckenden Landschaften, die faszinierende Kultur und die herzlichen Menschen zu
-            erleben. Von den atemberaubenden Stränden der Nordinsel bis zu den majestätischen Bergen
-            der Südinsel gibt es so viel zu entdecken. Ich werde meine Erfahrungen, Eindrücke und
-            wertvollen Erinnerungen teilen, während ich die Schönheit Neuseelands erkunde. Bleib dran
-            für spannende Geschichten und tolle Fotos!
-        </p>
+    <!-- ==================== Inhalt ==================== -->
+    <div class="container">
+        <p>Hier wird bald mehr über die Kultur in Neuseeland stehen!</p>
     </div>
 
-    <!-- ==================== Footer ==================== -->
+    <!-- Footer -->
     <footer class="footer">
         <div class="container footer-inner">
             <p>&copy; 2025 Amelie – Alle Rechte vorbehalten.</p>
