--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
             <nav class="nav-desktop">
                 <a href="index.html" class="nav-link">Startseite</a>
                 <a href="neuseeland.html" class="nav-link">Neuseeland</a>
-                <a href="an-und_Abreise.html" class="nav-link">An‑ und Abreise</a>
+                <a href="an-und_abreise.html" class="nav-link">An‑ und Abreise</a>
                 <a href="gastfamilie.html" class="nav-link">Gastfamilie</a>
                 <a href="schule.html" class="nav-link">Schule</a>
 
@@ -53,7 +53,7 @@
         <nav id="mobile-menu" class="nav-mobile hidden">
             <a href="index.html" class="mobile-link">Startseite</a>
             <a href="neuseeland.html" class="mobile-link">Neuseeland</a>
-            <a href="an-und_Abreise.html" class="mobile-link">An‑ und Abreise</a>
+            <a href="an-und_abreise.html" class="mobile-link">An‑ und Abreise</a>
             <a href="gastfamilie.html" class="mobile-link">Gastfamilie</a>
             <a href="schule.html" class="mobile-link">Schule</a>
             <a href="orte.html" class="mobile-link">Reisen & Orte</a>
