--- a/kultur.html
+++ b/kultur.html
@@ -43,7 +43,7 @@
         <nav id="mobile-menu" class="nav-mobile hidden">
             <a href="index.html" class="mobile-link">Startseite</a>
             <a href="neuseeland.html" class="mobile-link">Neuseeland</a>
-            <a href="an-und_Abreise.html" class="mobile-link">An‑ und Abreise</a>
+            <a href="an-und_abreise.html" class="mobile-link">An‑ und Abreise</a>
             <a href="gastfamilie.html" class="mobile-link">Gastfamilie</a>
             <a href="schule.html" class="mobile-link">Schule</a>
             <a href="orte.html" class="mobile-link">Reisen & Orte</a>
