an- und abreise 2

--- a/natur.html
+++ b/natur.html
@@ -6,7 +6,7 @@
     <title>Natur - Amelie in Neuseeland</title>
 
     <!-- CSS -->
-    <link rel="stylesheet" href="style.css?v=1.0">
+    <link rel="stylesheet" href="style.css?v=1.1">
 </head>
 <body>
 
@@ -20,7 +20,7 @@
             <nav class="nav-desktop">
                 <a href="index.html" class="nav-link">Startseite</a>
                 <a href="neuseeland.html" class="nav-link">Neuseeland</a>
-                <a href="an-und_Abreise.html" class="nav-link">An‑ und Abreise</a>
+                <a href="an-und_abreise.html" class="nav-link">An‑ und Abreise</a>
                 <a href="gastfamilie.html" class="nav-link">Gastfamilie</a>
                 <a href="schule.html" class="nav-link">Schule</a>
                 <div class="nav-item dropdown">
