Banner, erste Texte und Scroll to top button

--- a/index.html
+++ b/index.html
@@ -4,30 +4,25 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Amelie in Neuseeland</title>
-
-    <!-- CSS -->
-    <link rel="stylesheet" href="style.css?v=1.1">
+    <link rel="stylesheet" href="style.css?v=1.0">
 </head>
 <body>
 
     <!-- ==================== Navbar ==================== -->
     <header id="navbar" class="navbar">
         <div class="container nav-container">
-            <!-- Logo -->
             <div class="logo">
                 <div class="logo-icon">FN</div>
                 <span class="logo-text">FutureNav</span>
             </div>
 
-            <!-- Desktop‑Navigation -->
             <nav class="nav-desktop">
-                <a href="index.html" class="nav-link">Startseite</a>
+                <a href="index.html" class="nav-link active">Startseite</a>
                 <a href="neuseeland.html" class="nav-link">Neuseeland</a>
                 <a href="an-und_abreise.html" class="nav-link">An‑ und Abreise</a>
                 <a href="gastfamilie.html" class="nav-link">Gastfamilie</a>
                 <a href="schule.html" class="nav-link">Schule</a>
 
-                <!-- Dropdown für Reisen & Orte -->
                 <div class="nav-item dropdown">
                     <a href="#orte" class="nav-link">Reisen & Orte</a>
                     <ul class="dropdown-menu">
@@ -41,7 +36,6 @@
                 <a href="impressum.html" class="nav-link">Impressum</a>
             </nav>
 
-            <!-- Mobile‑Button -->
             <button id="mobile-menu-button" class="mobile-btn" aria-label="Menü öffnen">
                 <span class="bar bar1"></span>
                 <span class="bar bar2"></span>
@@ -49,9 +43,8 @@
             </button>
         </div>
 
-        <!-- Mobile‑Navigation -->
         <nav id="mobile-menu" class="nav-mobile hidden">
-            <a href="index.html" class="mobile-link">Startseite</a>
+            <a href="index.html" class="mobile-link active">Startseite</a>
             <a href="neuseeland.html" class="mobile-link">Neuseeland</a>
             <a href="an-und_abreise.html" class="mobile-link">An‑ und Abreise</a>
             <a href="gastfamilie.html" class="mobile-link">Gastfamilie</a>
@@ -65,28 +58,30 @@
         </nav>
     </header>
 
-    <!-- ==================== Hero (Video‑Banner) ==================== -->
+    <!-- ==================== Hero (Banner) ==================== -->
     <section id="hero" class="hero">
-        <video id="hero-video" autoplay muted loop playsinline>
-            <source src="https://www.w3schools.com/html/mov_bbb.mp4" type="video/mp4">
-            Ihr Browser unterstützt das Video‑Tag nicht.
-        </video>
-
-        <!-- Titel‑Overlay -->
+        <img id="hero-img-1" class="hero-img visible"
+             src="img/wellington-banner.jpg"
+             alt="Wellington">
+        <img id="hero-img-2" class="hero-img" src="" alt="Slider">
         <h1 class="hero-title">Amelie in Neuseeland</h1>
     </section>
 
-    <!-- ==================== Platzhalter‑Text ==================== -->
-    <div id="placeholder" class="container placeholder-text hidden">
-        <p>
-            Hier wird bald mehr über mein Abenteuer in Neuseeland stehen! Ich freue mich darauf,
-            die beeindruckenden Landschaften, die faszinierende Kultur und die herzlichen Menschen zu
-            erleben. Von den atemberaubenden Stränden der Nordinsel bis zu den majestätischen Bergen
-            der Südinsel gibt es so viel zu entdecken. Ich werde meine Erfahrungen, Eindrücke und
-            wertvollen Erinnerungen teilen, während ich die Schönheit Neuseelands erkunde. Bleib dran
-            für spannende Geschichten und tolle Fotos!
-        </p>
-    </div>
+    <!-- ==================== Intro (Platzhalter) ==================== -->
+    <section class="intro">
+        <div class="container">
+            <p class="intro-text">
+                Willkommen auf meiner Reise durch das atemberaubende Neuseeland! Hier findest du
+                spannende Berichte, inspirierende Fotos und praktische Tipps zu allen Aspekten
+                meines Auslandsaufenthaltes – von der An‑ und Abreise über die Gastfamilie,
+                das Schulsystem bis zu den schönsten Wanderungen, Stränden und kulturellen
+                Highlights der Nord‑ und Südinsel. Ich nehme dich mit auf meine Entdeckungsreise,
+                teile meine Erlebnisse und gebe dir wertvolle Einblicke, damit du deine eigene
+                Abenteuer‑Planung leichter gestalten kannst. Viel Spaß beim Stöbern und
+                lass dich von der Magie Neuseelands verzaubern!
+            </p>
+        </div>
+    </section>
 
     <!-- ==================== Footer ==================== -->
     <footer class="footer">
@@ -96,7 +91,9 @@
         </div>
     </footer>
 
-    <!-- JavaScript -->
+    <!-- Scroll‑to‑Top‑Button -->
+    <button id="topBtn" aria-label="Nach oben scrollen">↑</button>
+
     <script src="script.js?v=1.0"></script>
 </body>
 </html>
