--- a/kultur.html
+++ b/kultur.html
@@ -3,10 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Kultur - Amelie in Neuseeland</title>
+    <title>Kultur – Amelie in Neuseeland</title>
 
-    <!-- CSS -->
-    <link rel="stylesheet" href="style.css?v=1.1">
+    <link rel="stylesheet" href="style.css?v=1.0">
 </head>
 <body>
 
@@ -17,12 +16,14 @@
                 <div class="logo-icon">FN</div>
                 <span class="logo-text">FutureNav</span>
             </div>
+
             <nav class="nav-desktop">
                 <a href="index.html" class="nav-link">Startseite</a>
                 <a href="neuseeland.html" class="nav-link">Neuseeland</a>
                 <a href="an-und_abreise.html" class="nav-link">An‑ und Abreise</a>
                 <a href="gastfamilie.html" class="nav-link">Gastfamilie</a>
                 <a href="schule.html" class="nav-link">Schule</a>
+
                 <div class="nav-item dropdown">
                     <a href="#orte" class="nav-link">Reisen & Orte</a>
                     <ul class="dropdown-menu">
@@ -30,16 +31,19 @@
                         <li><a href="suedinsel.html" class="dropdown-link">Südinsel</a></li>
                     </ul>
                 </div>
-                <a href="kultur.html" class="nav-link">Kultur</a>
+
+                <a href="kultur.html" class="nav-link active">Kultur</a>
                 <a href="natur.html" class="nav-link">Natur</a>
                 <a href="impressum.html" class="nav-link">Impressum</a>
             </nav>
+
             <button id="mobile-menu-button" class="mobile-btn" aria-label="Menü öffnen">
                 <span class="bar bar1"></span>
                 <span class="bar bar2"></span>
                 <span class="bar bar3"></span>
             </button>
         </div>
+
         <nav id="mobile-menu" class="nav-mobile hidden">
             <a href="index.html" class="mobile-link">Startseite</a>
             <a href="neuseeland.html" class="mobile-link">Neuseeland</a>
@@ -49,24 +53,39 @@
             <a href="orte.html" class="mobile-link">Reisen & Orte</a>
             <a href="nordinsel.html" class="mobile-link">Nordinsel</a>
             <a href="suedinsel.html" class="mobile-link">Südinsel</a>
-            <a href="kultur.html" class="mobile-link">Kultur</a>
+            <a href="kultur.html" class="mobile-link active">Kultur</a>
             <a href="natur.html" class="mobile-link">Natur</a>
             <a href="impressum.html" class="mobile-link">Impressum</a>
         </nav>
     </header>
 
-    <!-- ==================== Banner ==================== -->
-    <section class="banner">
-        <img src="img/platzhalter_farn.jpg" alt="Banner Kultur">
-        <h1 class="banner-title">Kultur</h1>
+    <!-- ==================== Hero ==================== -->
+    <section id="hero" class="hero">
+        <img id="hero-img-1" class="hero-img visible"
+             src="img/kultur-banner.jpg"
+             alt="Kultur Banner">
+        <h1 class="hero-title">Kultur</h1>
     </section>
 
-    <!-- ==================== Inhalt ==================== -->
-    <div class="container">
-        <p>Hier wird bald mehr über die Kultur in Neuseeland stehen!</p>
-    </div>
+    <!-- ==================== Intro (Platzhalter) ==================== -->
+    <section class="intro">
+        <div class="container">
+            <p class="intro-text">
+                Neuseelands Kultur ist ein faszinierender Mix aus Māori‑Traditionen,
+                britischem Erbe und modernen Einflüssen. In diesem Abschnitt erzähle ich
+                von den wichtigsten kulturellen Highlights: dem Haka, dem Waiata,
+                traditionellen Kunsthandwerken, den jährlichen Festen (z. B. Pasifika‑Festival)
+                und dem modernen Musik‑ und Filmschaffen. Ich beschreibe meine persönlichen
+                Erlebnisse – von einem Besuch eines Marae (Versammlungshalle) bis zu einem
+                Konzert in Auckland – und gebe Tipps, wie du authentische kulturelle Erlebnisse
+                finden kannst, ohne die lokalen Gepflogenheiten zu verletzen. Außerdem gibt
+                es praktische Hinweise zu Etikette, Geschenk‑ und Verhaltensregeln, die du bei
+                Begegnungen mit Māori‑Gemeinschaften beachten solltest.
+            </p>
+        </div>
+    </section>
 
-    <!-- Footer -->
+    <!-- ==================== Footer ==================== -->
     <footer class="footer">
         <div class="container footer-inner">
             <p>&copy; 2025 Amelie – Alle Rechte vorbehalten.</p>
@@ -74,7 +93,9 @@
         </div>
     </footer>
 
-    <!-- JavaScript -->
+    <!-- Scroll‑to‑Top‑Button -->
+    <button id="topBtn" aria-label="Nach oben scrollen">↑</button>
+
     <script src="script.js?v=1.0"></script>
 </body>
 </html>
