--- a/schule.html
+++ b/schule.html
@@ -3,10 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Schule - Amelie in Neuseeland</title>
+    <title>Schule – Amelie in Neuseeland</title>
 
-    <!-- CSS -->
-    <link rel="stylesheet" href="style.css?v=1.1">
+    <!-- Stylesheet -->
+    <link rel="stylesheet" href="style.css?v=1.0">
 </head>
 <body>
 
@@ -17,12 +17,14 @@
                 <div class="logo-icon">FN</div>
                 <span class="logo-text">FutureNav</span>
             </div>
+
             <nav class="nav-desktop">
                 <a href="index.html" class="nav-link">Startseite</a>
                 <a href="neuseeland.html" class="nav-link">Neuseeland</a>
                 <a href="an-und_abreise.html" class="nav-link">An‑ und Abreise</a>
                 <a href="gastfamilie.html" class="nav-link">Gastfamilie</a>
-                <a href="schule.html" class="nav-link">Schule</a>
+                <a href="schule.html" class="nav-link active">Schule</a>
+
                 <div class="nav-item dropdown">
                     <a href="#orte" class="nav-link">Reisen & Orte</a>
                     <ul class="dropdown-menu">
@@ -30,22 +32,26 @@
                         <li><a href="suedinsel.html" class="dropdown-link">Südinsel</a></li>
                     </ul>
                 </div>
+
                 <a href="kultur.html" class="nav-link">Kultur</a>
                 <a href="natur.html" class="nav-link">Natur</a>
                 <a href="impressum.html" class="nav-link">Impressum</a>
             </nav>
+
             <button id="mobile-menu-button" class="mobile-btn" aria-label="Menü öffnen">
                 <span class="bar bar1"></span>
                 <span class="bar bar2"></span>
                 <span class="bar bar3"></span>
             </button>
         </div>
+
+        <!-- Mobile Navigation -->
         <nav id="mobile-menu" class="nav-mobile hidden">
             <a href="index.html" class="mobile-link">Startseite</a>
             <a href="neuseeland.html" class="mobile-link">Neuseeland</a>
             <a href="an-und_abreise.html" class="mobile-link">An‑ und Abreise</a>
             <a href="gastfamilie.html" class="mobile-link">Gastfamilie</a>
-            <a href="schule.html" class="mobile-link">Schule</a>
+            <a href="schule.html" class="mobile-link active">Schule</a>
             <a href="orte.html" class="mobile-link">Reisen & Orte</a>
             <a href="nordinsel.html" class="mobile-link">Nordinsel</a>
             <a href="suedinsel.html" class="mobile-link">Südinsel</a>
@@ -55,25 +61,41 @@
         </nav>
     </header>
 
-    <!-- ==================== Banner ==================== -->
-    <section class="banner">
-        <img src="img/platzhalter_farn.jpg" alt="Banner Schule">
-        <h1 class="banner-title">Schule</h1>
+    <!-- ==================== Hero (Banner) ==================== -->
+    <section id="hero" class="hero">
+        <img id="hero-img-1"
+             class="hero-img visible"
+             src="img/schule-banner.jpg"
+             alt="Schule Banner">
+        <h1 class="hero-title">Schule</h1>
     </section>
 
-    <!-- ==================== Inhalt ==================== -->
-    <div class="container">
-        <h1>Schule</h1>
-        <p>Hier wird bald mehr über meine Schule in Neuseeland stehen!</p>
-    </div>
+    <!-- ==================== Intro (Platzhalter‑Text) ==================== -->
+    <section class="intro">
+        <div class="container">
+            <p class="intro-text">
+                Der Schulalltag in Neuseeland unterscheidet sich in vielen Punkten vom
+                deutschen System. Hier erfährst du, wie das neuseeländische Schulsystem
+                aufgebaut ist, welche Fächer angeboten werden und wie das Bewertungssystem
+                funktioniert. Ich berichte von meinen ersten Klassen, den Lehrmethoden,
+                den außerschulischen Aktivitäten und den Freundschaften, die ich dort
+                geschlossen habe. Außerdem gebe ich Tipps, wie du dich schnell einlebst,
+                welche Materialien du mitbringen solltest und worauf du bei Hausaufgaben
+                und Projekten achten musst. 
+            </p>
+        </div>
+    </section>
 
-    <!-- Footer -->
+    <!-- ==================== Footer ==================== -->
     <footer class="footer">
         <div class="container footer-inner">
             <p>&copy; 2025 Amelie – Alle Rechte vorbehalten.</p>
             <a href="impressum.html" class="footer-link">Impressum</a>
         </div>
     </footer>
+
+    <!-- ==================== Scroll‑to‑Top‑Button ==================== -->
+    <button id="topBtn" aria-label="Nach oben scrollen">↑</button>
 
     <!-- JavaScript -->
     <script src="script.js?v=1.0"></script>
